--- a/chat/templates/chat/index.html
+++ b/chat/templates/chat/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <meta charset="utf-8"/>
-    <title>あいえうお</title>
+    <title>chattin goor</title>
 </head>
 <body>
-    What chat room would you like to enter?<br>
+    情報連携実習チーム３<br>
     <input id="room-name-input" type="text" size="100"><br>
     <input id="room-name-submit" type="button" value="Enter">
 
