--- a/chat/templates/chat/home.html
+++ b/chat/templates/chat/home.html
@@ -13,7 +13,7 @@
         <form action="{% url 'index' %}" method="post">
             {% csrf_token %}
             <div>
-                <label for=>aiueo</label><br>
+                <label for=>タイトル</label><br>
                 <input id="titleInput" name="title" type="text" placeholder="Input title">
             </div>
             <div>
