--- a/chat/templates/chat/home.html
+++ b/chat/templates/chat/home.html
@@ -30,11 +30,11 @@
         {% if articles %}
         {% for article in articles %}
         <div class="text">
-            <!--<h2><a href="{% url 'detail' article.id %}">{{ article.title }}</a></h2>!-->
+            <h2><a href="{% url 'detail' article.id %}">{{ article.title }}</a></h2>
             <small>[{{ article.posted_at }}]</small>
             <div>
-                <a onclick= "like({{article.id}});">
-                    Like: <span id = "like{{article.id}}"> {{ article.like }}</span>
+                <a onclick="like({{article.id}});">
+                    いいね: <span id="like{{article.id}}">{{ article.like }}</span>
                   </a> 
             </div>
         </div>
