--- a/negotiation/templates/negotiation/reply.html
+++ b/negotiation/templates/negotiation/reply.html
@@ -41,7 +41,7 @@
     {% endif %}
     
     <p>
-      <a href="{% url 'feedback' %}">トップページ</a> 
+      <a href="/feedback">トップページ</a> 
     </p>
   </body>
 </html>
