--- a/negotiation/templates/negotiation/feedback.html
+++ b/negotiation/templates/negotiation/feedback.html
@@ -5,7 +5,7 @@
         <title>team3</title>
         <meta charset="UTF-8">
         <!--link href="{% static 'chat/css/default.css' %}" rel="stylesheet"-->
-        <script type="text/javascript" src="{% static 'chat/js/index.js' %}"></script>
+        <script type="text/javascript" src="{% static 'negotiation/js/index.js' %}"></script>
     </head>
     <body>
         <h1>team3</h1>
