--- a/chatbot_flask2/static/css/chat.css
+++ b/chatbot_flask2/static/css/chat.css
@@ -15,3 +15,70 @@ body {
     border-radius: 5px;
     margin-bottom: 10px;
 }
+
+.chat{
+    min-width:500px;
+    width:100%;
+    box-sizing:border-box;
+    padding:10px; 
+    padding:10px; 
+    overflow: hidden;
+    background:rgb(230,230,230);
+}
+    
+.logo{
+    width:50px;
+    height:50px;
+    border-radius: 50%;
+    background:rgb(255,255,255);
+}
+.chat1{
+    display:flex;
+    box-pack:start;
+    -webkit-box-pack:start;
+    overflow: hidden;
+    margin:0 8px 16px 8px;
+}    
+    
+.chat1 .comment{
+    position:relative;
+    max-width:200px;
+    background:#fff;
+    padding:8px;
+    margin:0 8px 0 8px;
+    border:solid 1px rgb(150,150,150);
+    border-radius:8px;
+}
+
+.chat1 .time-box{
+    display:flex;
+    -webkit-align-items:flex-end;
+    align-items:flex-end;
+
+}
+    
+.chat2{
+    display:flex;
+    flex-direction:row-reverse;
+    box-pack:end;
+    -webkit-box-pack:end;
+    overflow: hidden;
+    margin:0 8px 16px 8px;
+}     
+    
+.chat2 .comment{
+    position:relative;
+    max-width:200px;
+    background:#fff;
+    margin:0 0 0 8px;
+    padding:8px;
+    border:solid 1px rgb(150,150,150);
+    border-radius:8px;
+}    
+
+.clearfix{clear:both;}
+
+.chat1 span.time,
+.chat2 span.read,
+.chat2 span.time{display:block;}
+
