--- a/chatbot_flask2/templates/index.html
+++ b/chatbot_flask2/templates/index.html
@@ -45,7 +45,7 @@
                 <!-- 新しい条件ここまで -->
 
                 <label for="theme">話し合うテーマ</label>
-                <textarea id="theme" name="user_input" required></textarea>
+                <input type="text" id="theme" name="user_input" required>
                 <br>
                 <button type="submit">Submit</button>
                 <br>
