--- a/chatbot_flask2/templates/chat.html
+++ b/chatbot_flask2/templates/chat.html
@@ -37,9 +37,9 @@
         {% for response_line in assistant_response.split('\n') %}
             {% if response_line.strip() != '' %}
                 <div class="chat2 clearfix">
-                    <div class="logo">
+                    <div class="logo{% for i in range(1, 11) %}{% if 'メンバー' + i|string in response_line %} member{{ i }}-class{% endif %}{% endfor %}">
                     </div>
-                    <div class="comment">
+                    <div class="comment{% for i in range(1, 11) %}{% if 'メンバー' + i|string in response_line %} member{{ i }}-class{% endif %}{% endfor %}">
                         <p><strong>ChatGPT:</strong> <span id="assistant-response">{{ response_line }}</span></p>
                     </div>
                 </div>
@@ -47,6 +47,8 @@
         {% endfor %}
     </div>
 {% endif %}
+
+
 
 </body>
 </html>
