--- a/chatbot_flask2/static/css/index.css
+++ b/chatbot_flask2/static/css/index.css
@@ -1,32 +1,78 @@
 /* index.css */
 
 body {
+    font-family: 'Arial', sans-serif;
+    background-color: #f4f4f4;
     margin: 0;
+    padding: 0;
 }
 
 .container {
     display: flex;
+    justify-content: space-between;
     align-items: center;
-    justify-content: center;
-    height: 100vh;
+    max-width: 1200px;
+    margin: 50px auto;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding: 20px;
 }
 
 .left-content {
-    width: 50%;
+    flex: 1;
     padding: 20px;
 }
 
 .right-content {
-    width: 50%;
-    overflow: hidden;
+    flex: 1;
+    text-align: center;
+}
+
+h1 {
+    color: #333;
+    font-size: 60px;
+}
+
+form {
+    margin-top: 20px;
+}
+
+label {
+    display: block;
+    margin-top: 10px;
+    font-weight: bold;
+    font-size: 20px;
+}
+
+textarea,
+select {
+    width: 100%;
+    padding: 10px;
+    margin-top: 5px;
+    margin-bottom: 10px;
+    box-sizing: border-box;
+}
+
+button {
+    background-color: #3498db;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+button:hover {
+    background-color: #2980b9;
 }
 
 #image-container {
-    text-align: center;
-    margin-right: 20px;
+    margin-top: 20px;
 }
 
 #RoundTable-image {
     max-width: 100%;
-    max-height: 100%;
+    height: auto;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
