--- a/chatbot_flask2/static/css/chat.css
+++ b/chatbot_flask2/static/css/chat.css
@@ -7,6 +7,7 @@ body {
     padding: 10px;
     border-radius: 5px;
     margin-bottom: 10px;
+    font-weight: bold;
 }
 
 .assistant-message {
@@ -14,6 +15,9 @@ body {
     padding: 10px;
     border-radius: 5px;
     margin-bottom: 10px;
+    color:#000000;
+    font-size: 20px;
+    font-weight: bold;
 }
 
 .chat{
