--- a/chatbot_flask2/static/css/index.css
+++ b/chatbot_flask2/static/css/index.css
@@ -2,7 +2,7 @@
 
 body {
     font-family: 'Arial', sans-serif;
-    background-color: #f4f4f4;
+    background-color: #b6d3f2;
     margin: 0;
     padding: 0;
 }
@@ -59,7 +59,7 @@ button {
     padding: 10px 20px;
     border: none;
     cursor: pointer;
-    font-size: 16px;
+    font-size: 25px;
 }
 
 button:hover {
